fixed the right -100% issue
which created the horizontal scroll bar in android device

--- a/responsive.css
+++ b/responsive.css
@@ -188,7 +188,7 @@
     }
     .menu-list{
         flex-direction: column;
-        right: -100%;
+        left: -100%;
         
     }
 
